oxiplate-derive/tests/broken/char/multiple-chars-eof.stderr
error: Unclosed character literal. Expected `'` after first character
 --> tests/broken/char/multiple-chars-eof.rs:4:24
  |
4 | #[oxiplate_inline(r"{{ 'hello")]
  |                        ^^^^^^
